<resources>
    <string name="app_name">TheBurguerProvectV2</string>
    <string name="pedido_activo">Pedido Activo</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="barra">Barra</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="mesas">Mesas</string>
    <string name="cerrar_pedido">cerrar pedido</string>
    <string name="hamburguesa">Hamburguesa:</string>
    <string name="simple">Simple</string>
    <string name="doble">Doble</string>
    <string name="cu_druple">Cuádruple</string>
    <string name="bomba">Bomba</string>
    <string name="triple">Triple</string>
    <string name="opcion">Opcion</string>
    <string name="papas">Papas</string>
    <string name="bebidas">Bebidas</string>
    <string name="cl_sicas">Clásicas</string>
    <string name="americanas">Americanas</string>
    <string name="point">Point</string>
    <string name="picantes">Picantes</string>
    <string name="salchipapas">Salchipapas</string>
    <string name="pinta">Pinta</string>
    <string name="gaseosa">Gaseosa</string>
    <string name="agua">Agua</string>
    <string name="trago">Trago</string>
    <string name="agua_saborizada">Agua Saborizada</string>
    <string name="postres">Postres</string>
    <string name="chocotorta">Chocotorta</string>
    <string name="tiramis">Tiramisú</string>
    <string name="lemon_pie">Lemon Pie</string>
    <string name="nutella">Nutella</string>
    <string name="oreo">Oreo</string>
    <string name="cargar">Cargar</string>
    <string name="editar">editar</string>
    <string name="delete_btn">delete_btn</string>
    <string name="rearmar_pedido">Rearmar pedido</string>
    <string name="ajustes">Ajustes</string>
</resources>
